--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+<style>
 body {
       background: #f5f5f5;
       font-family: 'Montserrat', Arial, sans-serif;
@@ -140,3 +141,4 @@ body {
       .main { padding: 24px 2vw; }
       .sidebar { padding: 22px 2vw; }
     }
+</style>
