--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-<style>
 body {
       background: #f5f5f5;
       font-family: 'Montserrat', Arial, sans-serif;
@@ -51,6 +50,14 @@ body {
       letter-spacing: 1px;
       font-weight: 700;
       margin: 30px 0 10px;
+      text-align: left;
+    }
+    .details-title {
+      font-size: 1.15rem;
+      letter-spacing: 1px;
+      font-weight: 700;
+      margin: 30px 0 10px;
+      text-align: center;
     }
     .details, .languages {
       width: 100%;
@@ -85,6 +92,9 @@ body {
       height: 100%;
       border-radius: 4px;
       background: #aad8ff;
+    }
+    .lang-english {
+      font-size: 0.485rem;
     }
     /* Main content */
     .main {
@@ -141,4 +151,3 @@ body {
       .main { padding: 24px 2vw; }
       .sidebar { padding: 22px 2vw; }
     }
-</style>
